LDEV-3275: Upgrade MySQL connector to version 5.1.31.