@@ -1,47 +1,49 @@
 /*
- Copyright (C) 2002-2007 MySQL AB
+  Copyright (c) 2002, 2014, Oracle and/or its affiliates. All rights reserved.
 
- This program is free software; you can redistribute it and/or modify
- it under the terms of version 2 of the GNU General Public License as 
- published by the Free Software Foundation.
+  The MySQL Connector/J is licensed under the terms of the GPLv2
+  <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
+  There are special exceptions to the terms and conditions of the GPLv2 as it is applied to
+  this software, see the FLOSS License Exception
+  <http://www.mysql.com/about/legal/licensing/foss-exception.html>.
 
- There are special exceptions to the terms and conditions of the GPL 
- as it is applied to this software. View the full text of the 
- exception in file EXCEPTIONS-CONNECTOR-J in the directory of this 
- software distribution.
+  This program is free software; you can redistribute it and/or modify it under the terms
+  of the GNU General Public License as published by the Free Software Foundation; version 2
+  of the License.
 
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
+  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+  See the GNU General Public License for more details.
 
- You should have received a copy of the GNU General Public License
- along with this program; if not, write to the Free Software
- Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-
-
+  You should have received a copy of the GNU General Public License along with this
+  program; if not, write to the Free Software Foundation, Inc., 51 Franklin St, Fifth
+  Floor, Boston, MA 02110-1301  USA
 
  */
+
 package com.mysql.jdbc;
 
 import java.io.IOException;
-
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-
 import java.net.InetAddress;
+import java.net.InetSocketAddress;
 import java.net.Socket;
+import java.net.SocketAddress;
 import java.net.SocketException;
-
+import java.net.UnknownHostException;
+import java.sql.DriverManager;
+import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.util.Properties;
 
 /**
  * Socket factory for vanilla TCP/IP sockets (the standard)
- * 
+ *
  * @author Mark Matthews
  */
-public class StandardSocketFactory implements SocketFactory {
+public class StandardSocketFactory implements SocketFactory, SocketMetadata {
 
 	public static final String TCP_NO_DELAY_PROPERTY_NAME = "tcpNoDelay";
 
@@ -87,40 +89,54 @@ public class StandardSocketFactory implements SocketFactory {
 	/** The underlying TCP/IP socket to use */
 	protected Socket rawSocket = null;
 
+	/** The remaining login time in milliseconds. Initial value set from defined DriverManager.setLoginTimeout() */
+	protected int loginTimeoutCountdown = DriverManager.getLoginTimeout() * 1000;
+
+	/** Time when last Login Timeout check occurred */
+	protected long loginTimeoutCheckTimestamp = System.currentTimeMillis();
+
+	/** Backup original Socket timeout to be restored after handshake */
+	protected int socketTimeoutBackup = 0;
+
 	/**
 	 * Called by the driver after issuing the MySQL protocol handshake and
 	 * reading the results of the handshake.
-	 * 
+	 *
 	 * @throws SocketException
 	 *             if a socket error occurs
 	 * @throws IOException
 	 *             if an I/O error occurs
-	 * 
+	 *
 	 * @return The socket to use after the handshake
 	 */
 	public Socket afterHandshake() throws SocketException, IOException {
+		resetLoginTimeCountdown();
+		this.rawSocket.setSoTimeout(this.socketTimeoutBackup);
 		return this.rawSocket;
 	}
 
 	/**
 	 * Called by the driver before issuing the MySQL protocol handshake. Should
 	 * return the socket instance that should be used during the handshake.
-	 * 
+	 *
 	 * @throws SocketException
 	 *             if a socket error occurs
 	 * @throws IOException
 	 *             if an I/O error occurs
-	 * 
+	 *
 	 * @return the socket to use before the handshake
 	 */
 	public Socket beforeHandshake() throws SocketException, IOException {
+		resetLoginTimeCountdown();
+		this.socketTimeoutBackup = this.rawSocket.getSoTimeout();
+		this.rawSocket.setSoTimeout(getRealTimeout(this.socketTimeoutBackup));
 		return this.rawSocket;
 	}
 
 	/**
 	 * Configures socket properties based on properties from the connection
 	 * (tcpNoDelay, snd/rcv buf, traffic class, etc).
-	 * 
+	 *
 	 * @param props
 	 * @throws SocketException
 	 * @throws IOException
@@ -160,7 +176,7 @@ public class StandardSocketFactory implements SocketFactory {
 
 			if (trafficClass > 0 && setTraficClassMethod != null) {
 				setTraficClassMethod.invoke(sock,
-						new Object[] { new Integer(trafficClass) });
+						new Object[] { Integer.valueOf(trafficClass) });
 			}
 		} catch (Throwable t) {
 			unwrapExceptionToProperClassAndThrowIt(t);
@@ -170,8 +186,7 @@ public class StandardSocketFactory implements SocketFactory {
 	/**
 	 * @see com.mysql.jdbc.SocketFactory#createSocket(Properties)
 	 */
-	public Socket connect(String hostname, int portNumber, Properties props)
-			throws SocketException, IOException {
+	public Socket connect(String hostname, int portNumber, Properties props) throws SocketException, IOException {
 
 		if (props != null) {
 			this.host = hostname;
@@ -180,47 +195,38 @@ public class StandardSocketFactory implements SocketFactory {
 
 			Method connectWithTimeoutMethod = null;
 			Method socketBindMethod = null;
-			Class socketAddressClass = null;
+			Class<?> socketAddressClass = null;
 
-			String localSocketHostname = props
-					.getProperty("localSocketAddress");
+			String localSocketHostname = props.getProperty("localSocketAddress");
 
 			String connectTimeoutStr = props.getProperty("connectTimeout");
 
 			int connectTimeout = 0;
 
-			boolean wantsTimeout = (connectTimeoutStr != null
-					&& connectTimeoutStr.length() > 0 && !connectTimeoutStr
-					.equals("0"));
+			boolean wantsTimeout = (connectTimeoutStr != null && connectTimeoutStr.length() > 0 && !connectTimeoutStr
+					.equals("0")) || this.loginTimeoutCountdown > 0;
 
-			boolean wantsLocalBind = (localSocketHostname != null && localSocketHostname
-					.length() > 0);
+			boolean wantsLocalBind = (localSocketHostname != null && localSocketHostname.length() > 0);
 
 			boolean needsConfigurationBeforeConnect = socketNeedsConfigurationBeforeConnect(props);
-			
-			if (wantsTimeout || wantsLocalBind || needsConfigurationBeforeConnect) {
 
+			if (wantsTimeout || wantsLocalBind || needsConfigurationBeforeConnect) {
 				if (connectTimeoutStr != null) {
 					try {
 						connectTimeout = Integer.parseInt(connectTimeoutStr);
 					} catch (NumberFormatException nfe) {
-						throw new SocketException("Illegal value '"
-								+ connectTimeoutStr + "' for connectTimeout");
+						throw new SocketException("Illegal value '" + connectTimeoutStr + "' for connectTimeout");
 					}
 				}
 
 				try {
-					// Have to do this with reflection, otherwise older JVMs
-					// croak
-					socketAddressClass = Class
-							.forName("java.net.SocketAddress");
+					// Have to do this with reflection, otherwise older JVMs croak
+					socketAddressClass = Class.forName("java.net.SocketAddress");
 
-					connectWithTimeoutMethod = Socket.class.getMethod(
-							"connect", new Class[] { socketAddressClass,
-									Integer.TYPE });
+					connectWithTimeoutMethod = Socket.class.getMethod("connect", new Class[] { socketAddressClass,
+							Integer.TYPE });
 
-					socketBindMethod = Socket.class.getMethod("bind",
-							new Class[] { socketAddressClass });
+					socketBindMethod = Socket.class.getMethod("bind", new Class[] { socketAddressClass });
 
 				} catch (NoClassDefFoundError noClassDefFound) {
 					// ignore, we give a better error below if needed
@@ -231,107 +237,87 @@ public class StandardSocketFactory implements SocketFactory {
 				}
 
 				if (wantsLocalBind && socketBindMethod == null) {
-					throw new SocketException(
-							"Can't specify \"localSocketAddress\" on JVMs older than 1.4");
+					throw new SocketException("Can't specify \"localSocketAddress\" on JVMs older than 1.4");
 				}
 
 				if (wantsTimeout && connectWithTimeoutMethod == null) {
-					throw new SocketException(
-							"Can't specify \"connectTimeout\" on JVMs older than 1.4");
+					throw new SocketException("Can't specify \"connectTimeout\" on JVMs older than 1.4");
 				}
 			}
 
 			if (this.host != null) {
 				if (!(wantsLocalBind || wantsTimeout || needsConfigurationBeforeConnect)) {
-					InetAddress[] possibleAddresses = InetAddress
-							.getAllByName(this.host);
+					InetAddress[] possibleAddresses = InetAddress.getAllByName(this.host);
 
 					Throwable caughtWhileConnecting = null;
 
-					// Need to loop through all possible addresses, in case
-					// someone has IPV6 configured (SuSE, for example...)
-
+					// Need to loop through all possible addresses, in case someone has IPV6 configured (SuSE, for
+					// example...)
 					for (int i = 0; i < possibleAddresses.length; i++) {
 						try {
-							this.rawSocket = new Socket(possibleAddresses[i],
-									port);
+							this.rawSocket = new Socket(possibleAddresses[i], this.port);
 
 							configureSocket(this.rawSocket, props);
 
 							break;
 						} catch (Exception ex) {
+							resetLoginTimeCountdown();
 							caughtWhileConnecting = ex;
 						}
 					}
 
-					if (rawSocket == null) {
+					if (this.rawSocket == null) {
 						unwrapExceptionToProperClassAndThrowIt(caughtWhileConnecting);
 					}
 				} else {
-					// must explicitly state this due to classloader issues
-					// when running on older JVMs :(
+					// must explicitly state this due to classloader issues when running on older JVMs :(
 					try {
-
-						InetAddress[] possibleAddresses = InetAddress
-								.getAllByName(this.host);
+						InetAddress[] possibleAddresses = InetAddress.getAllByName(this.host);
 
 						Throwable caughtWhileConnecting = null;
 
 						Object localSockAddr = null;
 
-						Class inetSocketAddressClass = null;
+						Class<?> inetSocketAddressClass = null;
 
-						Constructor addrConstructor = null;
+						Constructor<?> addrConstructor = null;
 
 						try {
-							inetSocketAddressClass = Class
-									.forName("java.net.InetSocketAddress");
+							inetSocketAddressClass = Class.forName("java.net.InetSocketAddress");
 
-							addrConstructor = inetSocketAddressClass
-									.getConstructor(new Class[] {
-											InetAddress.class, Integer.TYPE });
+							addrConstructor = inetSocketAddressClass.getConstructor(new Class[] { InetAddress.class,
+									Integer.TYPE });
 
 							if (wantsLocalBind) {
-								localSockAddr = addrConstructor
-										.newInstance(new Object[] {
-												InetAddress
-														.getByName(localSocketHostname),
-												new Integer(0 /*
-																 * use ephemeral
-																 * port
-																 */) });
-
+								localSockAddr = addrConstructor.newInstance(new Object[] {
+										InetAddress.getByName(localSocketHostname),
+										new Integer(0 /* use ephemeral port */) });
 							}
 						} catch (Throwable ex) {
 							unwrapExceptionToProperClassAndThrowIt(ex);
 						}
 
-						// Need to loop through all possible addresses, in case
-						// someone has IPV6 configured (SuSE, for example...)
-
+						// Need to loop through all possible addresses, in case someone has IPV6 configured (SuSE, for
+						// example...)
 						for (int i = 0; i < possibleAddresses.length; i++) {
-
 							try {
 								this.rawSocket = new Socket();
 
 								configureSocket(this.rawSocket, props);
 
-								Object sockAddr = addrConstructor
-										.newInstance(new Object[] {
-												possibleAddresses[i],
-												new Integer(port) });
-								// bind to the local port, null is 'ok', it
-								// means
-								// use the ephemeral port
-								socketBindMethod.invoke(rawSocket,
-										new Object[] { localSockAddr });
+								Object sockAddr = addrConstructor.newInstance(new Object[] { possibleAddresses[i],
+										Integer.valueOf(this.port) });
+								// bind to the local port if not using the ephemeral port
+								if (localSockAddr != null) {
+									socketBindMethod.invoke(this.rawSocket, new Object[] { localSockAddr });
+								}
 
-								connectWithTimeoutMethod.invoke(rawSocket,
-										new Object[] { sockAddr,
-												new Integer(connectTimeout) });
+								connectWithTimeoutMethod.invoke(this.rawSocket,
+										new Object[] { sockAddr, Integer.valueOf(getRealTimeout(connectTimeout)) });
 
 								break;
 							} catch (Exception ex) {
+								resetLoginTimeCountdown();
 								this.rawSocket = null;
 
 								caughtWhileConnecting = ex;
@@ -346,6 +332,7 @@ public class StandardSocketFactory implements SocketFactory {
 						unwrapExceptionToProperClassAndThrowIt(t);
 					}
 				}
+				resetLoginTimeCountdown();
 
 				return this.rawSocket;
 			}
@@ -357,7 +344,6 @@ public class StandardSocketFactory implements SocketFactory {
 	/**
 	 * Does the configureSocket() need to be called before the socket is
 	 * connect()d based on the properties supplied?
-	 * 
 	 */
 	private boolean socketNeedsConfigurationBeforeConnect(Properties props) {
 		int receiveBufferSize = Integer.parseInt(props.getProperty(
@@ -405,5 +391,102 @@ public class StandardSocketFactory implements SocketFactory {
 		}
 
 		throw new SocketException(caughtWhileConnecting.toString());
+	}
+
+	public static final String IS_LOCAL_HOSTNAME_REPLACEMENT_PROPERTY_NAME = "com.mysql.jdbc.test.isLocalHostnameReplacement";
+
+	public boolean isLocallyConnected(com.mysql.jdbc.ConnectionImpl conn)
+			throws SQLException {
+		long threadId = conn.getId();
+		java.sql.Statement processListStmt = conn.getMetadataSafeStatement();
+		ResultSet rs = null;
+
+		try {
+			String processHost = null;
+
+			rs = processListStmt.executeQuery("SHOW PROCESSLIST");
+
+			while (rs.next()) {
+				long id = rs.getLong(1);
+
+				if (threadId == id) {
+
+					processHost = rs.getString(3);
+
+					break;
+				}
+			}
+
+			// "inject" for tests
+			if (System.getProperty(IS_LOCAL_HOSTNAME_REPLACEMENT_PROPERTY_NAME) != null) {
+				processHost = System
+						.getProperty(IS_LOCAL_HOSTNAME_REPLACEMENT_PROPERTY_NAME);
+			} else if (conn.getProperties().getProperty(IS_LOCAL_HOSTNAME_REPLACEMENT_PROPERTY_NAME) != null) {
+				processHost = conn.getProperties().getProperty(IS_LOCAL_HOSTNAME_REPLACEMENT_PROPERTY_NAME);
+			}
+
+			if (processHost != null) {
+				if (processHost.indexOf(":") != -1) {
+					processHost = processHost.split(":")[0];
+
+					try {
+						boolean isLocal = false;
+
+						InetAddress whereMysqlThinksIConnectedFrom = InetAddress.getByName(processHost);
+						SocketAddress remoteSocketAddr = this.rawSocket.getRemoteSocketAddress();
+
+						if (remoteSocketAddr instanceof InetSocketAddress) {
+							InetAddress whereIConnectedTo = ((InetSocketAddress)remoteSocketAddr).getAddress();
+
+							isLocal = whereMysqlThinksIConnectedFrom.equals(whereIConnectedTo);
+						}
+
+						return isLocal;
+					} catch (UnknownHostException e) {
+						conn.getLog().logWarn(
+								Messages.getString(
+										"Connection.CantDetectLocalConnect",
+										new Object[] { this.host }), e);
+
+						return false;
+					}
+				}
+			}
+
+			return false;
+		} finally {
+			processListStmt.close();
+		}
+	}
+
+	/**
+	 * Decrements elapsed time since last reset from login timeout count down.
+	 *
+	 * @throws SocketException
+	 *             If the login timeout is reached or exceeded.
+	 */
+	protected void resetLoginTimeCountdown() throws SocketException {
+		if (this.loginTimeoutCountdown > 0) {
+			long now = System.currentTimeMillis();
+			this.loginTimeoutCountdown -= now - this.loginTimeoutCheckTimestamp;
+			if (this.loginTimeoutCountdown <= 0) {
+				throw new SocketException(Messages.getString("Connection.LoginTimeout"));
+			}
+			this.loginTimeoutCheckTimestamp = now;
+		}
+	}
+
+	/**
+	 * Validates the connection/socket timeout that must really be used.
+	 *
+	 * @param expectedTimeout
+	 *            The timeout to validate.
+	 * @return The timeout to be used.
+	 */
+	protected int getRealTimeout(int expectedTimeout) {
+		if (this.loginTimeoutCountdown > 0 && (expectedTimeout == 0 || expectedTimeout > this.loginTimeoutCountdown)) {
+			return this.loginTimeoutCountdown;
+		}
+		return expectedTimeout;
 	}
 }
